Stop short text from causing not enough whitespace

--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ hr {
   margin: 0;
 }
 
+.game {
+  min-height: 150px;
+}
+
 li {
   margin-bottom: 1em;
   margin-top: 1em;
